--- a/Web/Web/Pages/CreateMeeting.cshtml
+++ b/Web/Web/Pages/CreateMeeting.cshtml
@@ -73,7 +73,15 @@
 
                                 <div class="mb-3">
                                     <label asp-for="Meeting.Date" class="form-label">Дата и время *</label>
-                                    <input name="Date" type="datetime-local" class="form-control" required>
+                                    <div class="input-group">
+                                        <input name="Date" type="datetime-local" class="form-control" required>
+                                        <span class="input-group-text"
+                                              data-bs-toggle="tooltip"
+                                              data-bs-placement="top"
+                                              title="Введите местное время. У других пользователей будет отображаться их местное время.">
+                                            <i data-feather="info" class="text-info"></i>
+                                        </span>
+                                    </div>
                                     <span asp-validation-for="Meeting.Date" class="text-danger small"></span>
                                 </div>
 
@@ -93,6 +101,15 @@
         </div>
     </main>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        feather.replace();
+
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl);
+        });
+    </script>
+
 </body>
 </html>
