--- a/Web/Web/Pages/EditMeeting.cshtml
+++ b/Web/Web/Pages/EditMeeting.cshtml
@@ -69,11 +69,20 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label asp-for="Meeting.Date" class="form-label">Дата и время</label>
-                                            @{
-                                                var dateValue = Model.Meeting?.Date.ToLocalTime().ToString("yyyy-MM-ddTHH:mm") ?? DateTime.Now.AddDays(1).ToString("yyyy-MM-ddTHH:mm");
-                                            }
-                                            <input name="Date" type="datetime-local" class="form-control"
-                                                   value="@dateValue" required>
+
+                                            <div class="input-group">
+                                                @{
+                                                    var dateValue = Model.Meeting?.Date.ToLocalTime().ToString("yyyy-MM-ddTHH:mm") ?? DateTime.Now.AddDays(1).ToString("yyyy-MM-ddTHH:mm");
+                                                }
+                                                <input name="Date" type="datetime-local" class="form-control" value="@dateValue" required>
+                                                <span class="input-group-text"
+                                                      data-bs-toggle="tooltip"
+                                                      data-bs-placement="top"
+                                                      title="Если изменить время мероприятия менее чем на час, то могут возникнуть проблемы с отправкой уведомлений.">
+                                                    <i data-feather="alert-triangle" class="text-warning"></i>
+                                                </span>
+                                            </div>
+
                                             <span asp-validation-for="Meeting.Date" class="text-danger"></span>
                                         </div>
                                     </div>
@@ -103,8 +112,14 @@
             </div>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
         feather.replace();
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl);
+        });
     </script>
 </body>
 </html>
