--- a/Web/Web/Pages/Login.cshtml
+++ b/Web/Web/Pages/Login.cshtml
@@ -29,6 +29,16 @@
                             <p class="mb-0">Присоединяйтесь к нашей платформе</p>
                         </div>
                         <div class="card-body p-4">
+
+                            @if (TempData["Error"] != null)
+                            {
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    Ошибка входа, проверьте данные и попробуйте еще раз
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            }
+
+
                             <form method="post" action="/Home/Login">
                                 <!-- Name Input -->
                                 <div class="mb-3">
@@ -38,7 +48,7 @@
                                             <i data-feather="user"></i>
                                         </span>
                                         <input type="text" class="form-control" id="nameInput" name="email" required>
-                                    </div>
+                                    </div>  
                                 </div>
 
                                 <!-- Password Input -->
@@ -88,5 +98,6 @@
             feather.replace();
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
